maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:22: error: not found: value _X
    for(it <- 0 to _X.size -1){
                   ^ShortestPathMaze:35: error: value =- is not a member of Int
        _C_(4*it)=-1
                 ^ShortestPathMaze:44: error: value =- is not a member of Int
        _C_(4*it+1)=-1
                   ^ShortestPathMaze:53: error: value =- is not a member of Int
        _C_(4*it+2)=-1
                   ^ShortestPathMaze:62: error: value =- is not a member of Int
        _C_(4*it+3)=-1
                   ^